@@ -1,5 +1,10 @@
 2006-05-28  Han-Wen Nienhuys  <hanwen@lilypond.org>
 
+	* lily/ledger-line-engraver.cc (acknowledge_staff_symbol): be more
+	careful with generating new LedgerLineSpanners.
+
+	* lily/ledger-line-spanner.cc (set_spacing_rods): suicide if no staff.
+
 	* ly/engraver-init.ly: remove Ledger_line_engraver from Voice
 	context. This fixes double ledger lines in output. 
 
